# packages/contracts/api/src/index.ts
@@ -11,6 +11,7 @@ export type ResumeListItem = Schemas["ResumeListItem"];
 export type ResumeObj = Schemas["ResumeObj"];
 
 export type SuccessResponse = Schemas["SuccessResponse"];
+export type SuccessResponseWithResumeId = Schemas["SuccessResponseWithResumeId"];
 export type ErrorResponse = Schemas["ErrorResponse"];
 export type UnauthorizedErrorResponse = Components["responses"]["UnauthorizedError"];
 export type InternalServerErrorResponse = Components["responses"]["InternalServerError"];
